@@ -14,6 +14,9 @@
     - The undocumented save_xml method has been removed, along with
       the supporting functions in PDF::API2::Basic::*.
 
+    - The undocumented textstate2 method has been removed from
+      PDF::API2::Content.
+
     - [RT #58386] Fix create_egs call in Lite.pm (J Greely)
 
     - [RT #62922] Fix string interpolation in pdf-merge.pl
